# crate-add-macro

./: Cargo.toml  README.md
impl-display/: Cargo.toml
impl-display/src/: error.rs  impl_enum.rs  impl_struct.rs  lib.rs  prelude.rs  tools.rs
impl-display/tests/: test_enum.rs  test_struct.rs
impl-error/: Cargo.toml
impl-error/src/: error.rs  impl_enum.rs  impl_struct.rs  lib.rs  prelude.rs
impl-error/tests/: test_enum.rs  test_struct.rs
impl-from/: Cargo.toml
impl-from/src/: error.rs  impl_enum.rs  impl_struct.rs  lib.rs  tools.rs
impl-from/tests/: test_enum.rs  test_struct.rs
impl-fromstr/: Cargo.toml
impl-fromstr/src/: lib.rs
impl-fromstr/tests/: test_fromstr.rs
impl-into/: Cargo.toml
impl-into/src/: impl_enum.rs  impl_struct.rs  lib.rs  prelude.rs  tools.rs
impl-into/tests/: test_enum.rs  test_struct.rs
impl_display/: Cargo.toml
impl_display/src/: impl_enum.rs  impl_struct.rs  lib.rs  prelude.rs
impl_display/tests/: test_enum.rs  test_struct.rs
impl_fromstr/: Cargo.toml
impl_fromstr/src/: lib.rs
src/: lib.rs  main.rs
src/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  mod.rs  vec_deque.rs
src/io/: input.rs
src/string/: mod.rs  regex.rs  str.rs
tests/: test_collections.rs  test_io.rs  test_string.rs
