[package]
name = "add-macro"
decription = "The some useful macroses to help you coding"
version = "0.1.0"
edition = "2021"
authors = ["DrakeN-inc <t.me/DrakeN_inc>"]
license = "MIT"
repository = "https://github.com/DrakeN-inc/crate-add-macro"

[features]
tests = ["dep:regex"]

[dependencies]
regex = { version = "1.10.5", optional = true }
