[package]
name = "add-macro-impl-from"
decription = "Implementation of trait 'From<T>'"
version = "0.1.0"
edition = "2021"
authors = ["DrakeN-inc <t.me/DrakeN_inc>"]
license = "MIT"
repository = "https://github.com/DrakeN-inc/crate-add-macro/tree/main/impl-from"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
venial = "0.6.0"
