[package]
name = "add-macro-impl-fromstr"
description = "Implementation of trait 'FromStr'"
version = "0.1.0"
edition = "2021"
authors = ["DrakeN-inc <t.me/DrakeN_inc>"]
license = "MIT"
repository = "https://github.com/DrakeN-inc/crate-add-macro/tree/main/impl-fromstr"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.68"
